@@ -64,6 +64,9 @@ libc {
   GLIBC_2.26 {
     reallocarray;
   }
+  GLIBC_2.33 {
+    mallinfo2;
+  }
   GLIBC_PRIVATE {
     # Internal startup hook for libpthread.
     __libc_malloc_pthread_startup;
